basic info added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Internet Technologies and Web Design</title>
 </head>
 <body>
-    <p></p>
+    <h3>Spring 2026</h3>
+    <p>Kacper Stasik kstasik1@hawk.illinoistech.edu</p>
+    <h2>Professor:</h2>
+    <p>Daniel Krieglstein</p>
+    <h2>Lecture Days, Time and Place:</h2>
+    <p>Wednesday 6:25pm to 9:05pm, On Blackboard's Collaborate Ultra</p>
 </body>
 </html>
