--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Internet Technologies and Web Design</title>
 </head>
 <body>
+    <h1>ITMD-361 Internet Technologies and Web Design</h1>
     <h3>Spring 2026</h3>
     <p>Kacper Stasik kstasik1@hawk.illinoistech.edu</p>
     <h2>Professor:</h2>
@@ -13,5 +14,14 @@
     <p>Wednesday 6:25pm to 9:05pm, On Blackboard's Collaborate Ultra</p>
     <h2>Course Catalog Description:</h2>
     <p>This course will cover the creation of Web pages and sites using HTML, CSS, Javascript and graphical applications. Networked multimedia distribution technologies are also explored. The design of effective Web site including page layout, user interface design, graphic design, content flow and site structure as well as management of Web site resources including intranet management and design considerations are addressed. Students design and create a major Web site with multiple pages and cross-linked structures. <strong>Prerequisites</strong>: [none] <strong>Credit</strong>: 2-2-3 Semester Hours</p>
+    <h2>Course Outcomes:</h2>
+    <p>Students completing this course will be able to:</p>
+        <ul>
+            <li>Recognize HTML, CSS, and JavaScript markup and code.</li>
+            <li>Select the proper mark-up tags or code to achieve a particular results.</li>
+            <li>Identify improperly used markup and code.</li>
+            <li>Produce modern standards compliant web pages.</li>
+            <li>Deploy web pages to a GitHub server.</li>
+        </ul>
 </body>
 </html>
